Edited the links with correct path.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section class="about" id="About">
     <div class="content-wrap">
     <h3>About me</h3>
-    <img src="file:///Users/Atessa/Desktop/llc-html-css-half-day-master/project/images/buildings.jpg">
+    <img src="/images/buildings.jpg">
       <p>In North Vancouver I was born and raised, on the soccer field is where I spent most of my days.</p>
       <p>Mark territory put toy mouse in food bowl run out of litter box at full speed hunt anything that moves sweet beast bathe private parts with tongue then lick owner's face for ears back wide eyed. Sleep on keyboard pooping rainbow while flying in a toasted bread costume in space yet use lap as chair. I am the best pelt around the house and up and down stairs chasing phantoms sweet beast scratch the furniture see owner, run in terror.</p>
       <p>Mark territory put toy mouse in food bowl run out of litter box at full speed hunt anything that moves sweet beast bathe private parts with tongue then lick owner's face for ears back wide eyed. Sleep on keyboard pooping rainbow while flying in a toasted bread costume in space yet use lap as chair. I am the best pelt around the house and up and down stairs chasing phantoms sweet beast scratch the furniture see owner, run in terror.</p>
@@ -42,16 +42,16 @@
     <div class="content-wrap"> 
     <h2>Design Portfolio</h2>
     <a href="portfolio.html">
-      <img src="file:///Users/Atessa/Desktop/llc-html-css-half-day-master/project/images/1.jpg">
+      <img src="/images/1.jpg">
     </a>
-     <img src="file:///Users/Atessa/Desktop/llc-html-css-half-day-master/project/images/2.jpg">
-      <img src="file:///Users/Atessa/Desktop/llc-html-css-half-day-master/project/images/3.jpg">
-      <img src="file:///Users/Atessa/Desktop/llc-html-css-half-day-master/project/images/1.jpg">
-     <img src="file:///Users/Atessa/Desktop/llc-html-css-half-day-master/project/images/2.jpg">
-      <img src="file:///Users/Atessa/Desktop/llc-html-css-half-day-master/project/images/3.jpg">
-        <img src="file:///Users/Atessa/Desktop/llc-html-css-half-day-master/project/images/1.jpg">
-     <img src="file:///Users/Atessa/Desktop/llc-html-css-half-day-master/project/images/2.jpg">
-      <img src="file:///Users/Atessa/Desktop/llc-html-css-half-day-master/project/images/3.jpg">
+     <img src="/images/2.jpg">
+      <img src="/images/3.jpg">
+      <img src="/images/1.jpg">
+     <img src="/images/2.jpg">
+      <img src="/images/3.jpg">
+        <img src="/images/1.jpg">
+     <img src="/images/2.jpg">
+      <img src="/images/3.jpg">
     </div>     
     </section>
     
